<resources>
    <string name="app_name">DEVITY</string>

    <string name="add_menu_item_text">Add</string>
    <string name="stats_menu_item_text">Statistics</string>
    <string name="debts_menu_item_text">Debts</string>

    <string name="button_add_1">Add income</string>
    <string name="button_add_2">Add Cost</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="income">Income</string>
    <string name="costs">Costs</string>
    <string name="add">add</string>
    <string name="i_must">I must</string>
    <string name="they_owe_me">They owe me</string>
    <string name="plus">+</string>

    <string name="pay">Pay</string>
    <string name="category">Category</string>
    <string name="comment">Comment</string>
    <string name="time">Time</string>
    <string name="date">Date</string>

    <string name="date_temp">25.01.1997</string>
    <string name="time_temp">11:25</string>

    <string name="amount">Amount</string>
    <string name="who">Who</string>
    <string name="whom">Whom</string>
    <string name="add_debt">Add debt</string>
    <string name="cancel">Cancel</string>

    <string name="data_stats">dataStore.json</string>
    <string name="data_debts">dataDebts.json</string>

</resources>
