<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_ad"
    android:tag="dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Material_Field"
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mater_margin"
        android:layout_marginRight="@dimen/mater_margin"
        android:layout_marginTop="@dimen/mater_margin"
        android:hint="@string/amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Material_Field"
        android:id="@+id/to_whom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mater_margin"
        android:layout_marginRight="@dimen/mater_margin"
        android:layout_marginTop="@dimen/mater_margin"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/whom">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Material_Field"
        android:id="@+id/text_comment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/mater_margin"
        android:layout_marginRight="@dimen/mater_margin"
        android:layout_marginTop="@dimen/mater_margin"
        app:layout_constraintTop_toBottomOf="@+id/to_whom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/comment">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_add_debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add_debt"
        android:text="@string/add_debt"
        android:textSize="@dimen/test_size_fragment"
        app:icon="@drawable/ic_add_black_24dp"
        android:layout_marginTop="@dimen/mater_margin"
        android:layout_marginBottom="@dimen/mater_margin"
        android:layout_marginRight="@dimen/mater_margin"
        android:layout_marginEnd="@dimen/mater_margin"
        android:layout_marginStart="@dimen/mater_margin_x4"
        android:layout_marginLeft="@dimen/mater_margin_x4"
        app:layout_constraintTop_toBottomOf="@+id/text_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/cancel"
        android:text="@string/cancel"
        android:textSize="@dimen/test_size_fragment"
        app:icon="@drawable/ic_cancel_black_24dp"
        android:layout_marginTop="@dimen/mater_margin"
        android:layout_marginBottom="@dimen/mater_margin"
        android:layout_marginStart="@dimen/mater_margin"
        android:layout_marginLeft="@dimen/mater_margin"
        app:layout_constraintTop_toBottomOf="@+id/text_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>